Another attempt at fixing the overflow in home

--- a/src/index.css
+++ b/src/index.css
@@ -200,6 +200,7 @@ input.exerciseSearch{
 /* ====Dashboard==== */
 .clearfix{
 	padding-top:1px;
+	overflow-x:hidden;
 }
 .dashboardHero {
 	display:flex;
